Use freshly rendered graypaper
Signed-off-by: Oliver Tale-Yazdi <oliver@tasty.limo>

--- a/lib/phoenix_app_web/templates/page/spec.html.heex
+++ b/lib/phoenix_app_web/templates/page/spec.html.heex
@@ -43,15 +43,16 @@
 </article>
     <article class="py-5">
       <p class="text-gray-300">
-        Download version 0.3.0 of the Graypaper with
-        <%= link "gray", to: "/graypaper/Graypaper_0_3_0_gray.pdf", class: "text-indigo-600 hover:text-blue-300" %> 
+        Download the Graypaper with
+        <%= link "original", to: "/graypaper/graypaper_lemon_jelly.pdf", class: "text-indigo-600 hover:text-blue-300" %>,
+        <%= link "dark", to: "/graypaper/graypaper_dark.pdf", class: "text-indigo-600 hover:text-blue-300" %> 
         or
-        <%= link "white", to: "/graypaper/Graypaper_0_3_0_white.pdf", class: "text-indigo-600 hover:text-blue-300" %> 
+        <%= link "light", to: "/graypaper/graypaper_light.pdf", class: "text-indigo-600 hover:text-blue-300" %> 
         background.
       </p>
       <object
         class="mt-8" style="width:100%; height: auto; aspect-ratio: 21/29; overflow:hidden"
-        data="/graypaper/Graypaper_0_3_0_gray.pdf#toolbar=0"
+        data="/graypaper/graypaper_lemon_jelly.pdf#toolbar=0"
       ></object>
     </article>
   </div>
