--- a/lib/phoenix_app_web/templates/page/spec.html.heex
+++ b/lib/phoenix_app_web/templates/page/spec.html.heex
@@ -40,8 +40,11 @@
       <li><%= link "Davide - Ring VRF Example", to: "https://gist.github.com/davxy/c3327f799cb70a7c55087c97741fa8d9", class: "text-indigo-600 hover:text-blue-300", target: "_blank" %></li>
     </ul>
   </div>
-</article>
-    <article class="py-5">
+  </article>
+  <p class="text-xl text-gray-300 mt-8">
+    Graypaper
+  </p>
+    <article class="">
       <p class="text-gray-300">
         Download the Graypaper with
         <%= link "original", to: "/graypaper/graypaper_lemon_jelly.pdf", class: "text-indigo-600 hover:text-blue-300" %>,
