Fonts and spacing
Signed-off-by: Oliver Tale-Yazdi <oliver@tasty.limo>

--- a/lib/phoenix_app_web/templates/page/index.html.heex
+++ b/lib/phoenix_app_web/templates/page/index.html.heex
@@ -7,39 +7,39 @@
 </section>
 <section class="w-full py-16 bg-gray-900 text-center">
   <div class="max-w-3xl mx-auto px-4 grid gap-16">
-    <article class="py-8">
+    <article class="py-12">
       <h2 class="text-2xl font-semibold mb-4 text-white">INTRO</h2>
-      <p class="text-gray-300">
+      <p class="text-xl text-gray-300">
         The <i><b>J</b>oin <b>A</b>ccumulate <b>M</b>achine</i> was designed by top-notch blockchain researchers and is described
         in the <%= link "graypaper", to: Routes.page_path(@conn, :spec), class: "text-indigo-600 hover:text-blue-300" %>.
         It aims at being a successor to the Polkadot Relay Chain and is currently being implemented by multiple teams.
       </p>
     </article>
-    <article class="py-8">
+    <article class="py-12">
       <h2 class="text-2xl font-semibold mb-4 text-white">PRIZE</h2>
-      <p class="text-gray-300">
+      <p class="text-xl text-gray-300">
         A prize pool of 10 MILLION DOT is provided by the <%= link "w3f", to: "https://jam.web3.foundation/", class: "text-indigo-600 hover:text-blue-300", target: "_blank" %>
-        to incentivise multiple client implementations. This pool is spread over different language
+        to incentivize multiple client implementations. This pool is spread over different language
         sets and up for grabs to anyone.
       </p>
     </article>
-    <article class="py-8">
+    <article class="py-12">
       <h2 class="text-2xl font-semibold mb-4 text-white">CLIENTS</h2>
-      <p class="text-gray-300">
+      <p class="text-xl text-gray-300">
         Different <%= link "teams", to: Routes.team_path(@conn, :index), class: "text-indigo-600 hover:text-blue-300" %> are working on client implementations for the JAM
         chain in parallel. The goal is to achieve client diversity from day one
         to facilitate network stability and ensure unambiguity of the spec.
       </p>
     </article>
     
-    <article class="py-8">
+    <article class="py-12">
     <h2 class="text-2xl font-semibold mb-4 text-white">NEWS</h2>
     <div class="grid grid-cols-1 md:grid-cols-1 gap-6">
       <div class="mt-4 bg-gray-800 rounded-lg shadow-md p-6">
         <h3 class="text-xl font-semibold text-white mb-3">
           <i>JAM0</i> Meetup Proposal
         </h3>
-        <p class="text-gray-300 mb-4">
+        <p class="text-xl text-gray-300 mb-4">
           An OpenGov proposal is up for vote to decide whether to fund a meetup at Devcon 7, where JAM implementor teams can collaborate.
         </p>
         <%= link "Read more", to: "https://polkadot.polkassembly.io/referenda/1024", class: "text-indigo-600 hover:text-blue-300", target: "_blank" %>
