Reorder /spec page
Signed-off-by: Oliver Tale-Yazdi <oliver@tasty.limo>

--- a/lib/phoenix_app_web/templates/page/index.html.heex
+++ b/lib/phoenix_app_web/templates/page/index.html.heex
@@ -36,10 +36,10 @@
     <h2 class="text-2xl font-semibold mb-4 text-white">NEWS</h2>
     <div class="grid grid-cols-1 md:grid-cols-1 gap-6">
       <div class="mt-4 bg-gray-800 rounded-lg shadow-md p-6">
-        <h3 class="text-xl font-semibold text-white mb-3">
+        <h3 class="text-l font-semibold text-white mb-3">
           <i>JAM0</i> Meetup Proposal
         </h3>
-        <p class="text-xl text-gray-300 mb-4">
+        <p class="text-gray-300 mb-4">
           An OpenGov proposal is up for vote to decide whether to fund a meetup at Devcon 7, where JAM implementor teams can collaborate.
         </p>
         <%= link "Read more", to: "https://polkadot.polkassembly.io/referenda/1024", class: "text-indigo-600 hover:text-blue-300", target: "_blank" %>
