--- a/lib/phoenix_app_web/templates/page/spec.html.heex
+++ b/lib/phoenix_app_web/templates/page/spec.html.heex
@@ -26,10 +26,9 @@
       <p class="text-gray-300 mt-4">
         Download it with
         <%= link "original", to: "/graypaper/graypaper_lemon_jelly.pdf", class: "text-indigo-600 hover:text-blue-300" %>,
-        <%= link "dark", to: "/graypaper/graypaper_dark.pdf", class: "text-indigo-600 hover:text-blue-300" %> 
-        or
+        <%= link "dark", to: "/graypaper/graypaper_dark.pdf", class: "text-indigo-600 hover:text-blue-300" %>, 
         <%= link "light", to: "/graypaper/graypaper_light.pdf", class: "text-indigo-600 hover:text-blue-300" %> 
-        background.
+        background or check out the <%= link "Reader", to: "https://graypaper.fluffylabs.dev/", class: "text-indigo-600 hover:text-blue-300", target: "_blank" %>.
       </p>
     </article>
     
