--- a/lib/phoenix_app_web/templates/layout/root.html.heex
+++ b/lib/phoenix_app_web/templates/layout/root.html.heex
@@ -20,10 +20,13 @@
             <%= link "Home", to: Routes.page_path(@conn, :index), class: "text-indigo-600 hover:text-blue-300" %>
           </li>
           <li>
-            <%= link "Tech", to: Routes.page_path(@conn, :index), class: "text-indigo-600 hover:text-blue-300" %>
+            <%= link "Tech", to: Routes.page_path(@conn, :tech), class: "text-indigo-600 hover:text-blue-300" %>
           </li>
           <li>
-            <%= link "Spec", to: Routes.page_path(@conn, :index), class: "text-indigo-600 hover:text-blue-300" %>
+            <%= link "Spec", to: Routes.page_path(@conn, :spec), class: "text-indigo-600 hover:text-blue-300" %>
+          </li>
+          <li>
+            <%= link "Clients", to: Routes.team_path(@conn, :index), class: "text-indigo-600 hover:text-blue-300" %>
           </li>
           <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
             <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home), class: "text-indigo-600 hover:text-blue-300" %></li>
