--- a/lib/phoenix_app_web/templates/page/index.html.heex
+++ b/lib/phoenix_app_web/templates/page/index.html.heex
@@ -49,10 +49,10 @@
     <div class="grid grid-cols-1 md:grid-cols-1 gap-6">
       <div class="mt-4 bg-gray-800 rounded-lg shadow-md p-6">
         <h3 class="text-l font-semibold text-white mb-3">
-          <i>JAM0</i> Meetup Proposal
+          <i>JAM0</i> JAM Meetup Lisbon
         </h3>
         <p class="text-gray-300 mb-4">
-          An OpenGov proposal is up for vote to decide whether to fund a meetup at Devcon 7, where JAM implementor teams can collaborate.
+          There will be a JAM implementors meetup in Lisbon on the 21th Oct 2024. Location should be the Parity office.
         </p>
         <%= link "Read more", to: "https://polkadot.polkassembly.io/referenda/1024", class: "text-indigo-600 hover:text-blue-300", target: "_blank" %>
       </div>
