--- a/lib/phoenix_app_web/templates/event/index.html.heex
+++ b/lib/phoenix_app_web/templates/event/index.html.heex
@@ -2,9 +2,7 @@
   <div class="max-w-3xl mx-auto">
     <h2 class="text-2xl font-semibold mb-4 text-white">EVENTS</h2>
     <p class="text-xl text-gray-300">
-      Join our diverse range of community events.
-      From workshops to conferences, there's something
-      for everyone in our network.
+      Join our community organized events 🤝
     </p>
   </div>
 </section>
