--- a/lib/phoenix_app_web/templates/team/index.html.heex
+++ b/lib/phoenix_app_web/templates/team/index.html.heex
@@ -11,7 +11,10 @@
 </section>
 <section class="w-full py-16 bg-gray-900">
   <div class="max-w-4xl mx-auto px-4">
-    <article class="text-center py-8">
+    <article class="text-center">
+      <div class="mb-8">
+        <%= link "Get Listed", to: "https://github.com/w3f-webops/graypaper-website/issues/new?assignees=&labels=&projects=&template=client-listing-request.md&title=Client+Listing%3A+XYZ", class: "bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded shadow-md transition duration-300 ease-in-out", target: "_blank" %>
+      </div>
       <div class="overflow-x-auto">
         <table class="min-w-full bg-gray-800 border border-gray-700 rounded-lg overflow-hidden">
           <thead>
@@ -86,9 +89,6 @@
             <% end %>
           </tbody>
         </table>
-      </div>
-      <div class="mt-8">
-        <%= link "Get Listed", to: "https://github.com/w3f-webops/graypaper-website/issues/new?assignees=&labels=&projects=&template=client-listing-request.md&title=Client+Listing%3A+XYZ", class: "bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded shadow-md transition duration-300 ease-in-out", target: "_blank" %>
       </div>
       <div class="mt-8">
         <%= if PhoenixAppWeb.UserAuth.authenticated?(@conn) do %>
